--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "manipulation"
     ],
     "homepage": "https://git.zoolt.com/zoolt/imagemanip",
-    "license": "proprietairy",
+    "license": "MIT",
     "authors": [
         {
             "name": "Rik van der Heijden",
@@ -20,13 +20,14 @@
     "require": {
         "php": "^7.0",
         "ext-exif": "*",
-        "spatie/image-optimizer": "^1.0",
-        "spatie/temporary-directory": "^1.0.0"
+        "ext-gd": "*",
+        "spatie/image-optimizer": "^1.0"
     },
     "require-dev": {
         "larapack/dd": "^1.1",
         "phpunit/phpunit": "^6.0|^7.0",
-        "symfony/var-dumper": "^3.2"
+        "symfony/var-dumper": "^3.2",
+        "spatie/temporary-directory": "^1.0.0"
     },
     "autoload": {
         "psr-4": {
