--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
         }
     ],
     "require": {
-        "php": "^7.0",
+        "php": "^7.0|^8.0",
         "ext-exif": "*",
         "ext-gd": "*",
         "spatie/image-optimizer": "^1.0"
     },
     "require-dev": {
         "larapack/dd": "^1.1",
-        "phpunit/phpunit": "^6.0|^7.0",
+        "phpunit/phpunit": "^7.0|^8.0",
         "symfony/var-dumper": "^3.2",
         "spatie/temporary-directory": "^1.0.0"
     },
